--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.14195 2015/03/05 14:44:57 mef Exp $
+$NetBSD: TODO,v 1.14196 2015/03/05 21:05:22 wiz Exp $
 
 Suggested new packages
 ======================
@@ -724,7 +724,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o libgnome-keyring-3.12.0
 	o libgnomedb-3.1.2
 	o libgnomekbd-3.4.0.2
-	o libidn-1.30
 	o libixp-0.5 [breaks wmii-3.6, wait for compatible version; see also wmii+ixp entry]
 	o libjit-1.0.2
 	o libmcs-0.7.2
