--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.14202 2015/03/08 13:00:23 mef Exp $
+$NetBSD: TODO,v 1.14203 2015/03/08 15:12:50 wen Exp $
 
 Suggested new packages
 ======================
@@ -429,7 +429,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o cint-5.16
 	o cjk-lyx-1.4.4
 	o classpath-0.98
-	o cln-1.33
+	o cln-1.3.4
 	o cloog-0.18.3
 	o clutter-gst-3.0.2
 	o colorize-0.3.4
@@ -653,7 +653,8 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o handbrake-0.10.0
 	o hanzim-3.5
 	o haskell-mode-1.45
-	o hdf-4.2.7
+	o hdf-4.2.8
+	o hdf5-1.8.14
 	o hesiod-3.1.0
 	o heyu-2.9.0
 	o hiawatha-9.5
@@ -761,7 +762,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o maketool-0.8.4
 	o makeztxt-1.60
 	o manedit-1.2.1
-	o maradns-2.0.09
+	o maradns-2.0.11
 	o matchbox-panel-0.9.3
 	o mawk-1.3.4.20141206
 	o mbuf-20141227
