--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.14206 2015/03/09 03:32:31 mef Exp $
+$NetBSD: TODO,v 1.14207 2015/03/09 06:11:59 wiz Exp $
 
 Suggested new packages
 ======================
@@ -349,6 +349,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o acpica-utils-20110623
 	o adocman-0.13
 	o aewm++-1.0.27
+	o afl-1.56b
 	o alacarte-0.13.2
 	o allegro-5.10
 	o alsa-lib-1.0.29
@@ -456,6 +457,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o darcs-2.4
 	o darktable-1.6
 	o dasher-4.11
+	o dateutils-0.3.2
 	o dbmail-3.2.0
 	o dcc-1.3.147 [ask OWNER first]
 	o dd_rescue-1.45
@@ -648,6 +650,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o hamster-applet-2.32.1 [GNOME 2.32]
 	o handbrake-0.10.0
 	o hanzim-3.5
+	o harfbuzz-0.9.39
 	o haskell-mode-1.45
 	o hdf-4.2.8
 	o hdf5-1.8.14
@@ -736,6 +739,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o libuv-1.4.2
 	o libv4l-0.8.5
 	o libvdpau-0.9
+	o libvorbis-1.3.5
 	o libxdg-basedir-1.2.0
 	o libxklavier-5.3
 	o libxml++-2.38.0
@@ -876,6 +880,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o pokerth-1.0.1
 	o polsms-2.1.0
 	o poppass-4.0.14
+	o poppler-0.32.0
 	o postal-0.72
 	o postfix-3.0
 	o powermanga-0.91
@@ -893,6 +898,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-Scientific-doc-2.5.5
 	o py-Unidecode-0.04.14
 	o py-cassa-1.11.0
+	o py-cffi-0.9.1
 	o py-creole-1.1.1
 	o py-datapkg-0.9
 	o py-django-photologue-2.7
@@ -914,6 +920,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-ptt-1.10.2
 	o py-reportlab-3.0
 	o py-rope-0.9.4
+	o py-setuptools-14.0
 	o py-simpletal-5.1
 	o py-simpy-3.0.5
 	o py-smb-1.1.8
@@ -955,7 +962,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o ruby-review-1.4.0 [wip]
 	o sabayon-2.30.1 [GNOME 2.30]
 	o sablecc-3.7
-	o samba-4.0.23
+	o samba-4.2.0
 	o samba-4.1.9 [wip]
 	o samba-4.1.14
 	o sane-1.0.24
@@ -1094,7 +1101,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o weechat-1.1
 	o wesnoth-1.12.1
 	o windowlab-1.40
-	o wine-devel-1.7.37
+	o wine-devel-1.7.38
 	o wmi-11
 	o wmii+ixp-3.9.2 [pkg/43459; wip (wmii-devel); see also libixp entry]
 	o wmweather-2.4.4
@@ -1149,6 +1156,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o xscreensaver-5.30
 	o xsd-3.3.0
 	o xsoldier-1.4
+	o xterm-316
 	o xtraceroute-0.9.1
 	o xtux-20030306
 	o xvidcap-1.1.7
