--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.14219 2015/03/10 21:08:39 asau Exp $
+$NetBSD: TODO,v 1.14220 2015/03/11 11:16:20 wiz Exp $
 
 Suggested new packages
 ======================
@@ -736,7 +736,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o libuv-1.0.1 [pkg/49442]
 	o libuv-1.4.2
 	o libv4l-0.8.5
-	o libvdpau-0.9
+	o libvdpau-1.0
 	o libxdg-basedir-1.2.0
 	o libxklavier-5.3
 	o libxml++-2.38.0
@@ -1090,6 +1090,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o webmin-1.690
 	o websvn-2.3.2
 	o weechat-1.1
+	o wget-1.16.3
 	o windowlab-1.40
 	o wine-devel-1.7.38
 	o wmi-11
