--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.14224 2015/03/12 14:56:52 ryoon Exp $
+$NetBSD: TODO,v 1.14225 2015/03/14 01:52:09 prlw1 Exp $
 
 Suggested new packages
 ======================
@@ -634,7 +634,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o gtk-systrace-20030623
 	o gtkglarea-2.1.0
 	o gtkmm-documentation-2.16.0 [GNOME 2.26]
-	o gtksourceview-3.14
 	o gtl-3.6
 	o gtodo-0.16.0rc2
 	o gtodo-applet-0.16.2
