--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.14226 2015/03/14 07:56:38 ryoon Exp $
+$NetBSD: TODO,v 1.14227 2015/03/14 14:34:35 ryoon Exp $
 
 Suggested new packages
 ======================
@@ -399,7 +399,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o bliz++-0.10
 	o blur6ex-0.3.462
 	o bmon-2.1.0
-	o bochs-2.6.7
+	o bochs-2.6.7 [wip]
 	o boolean-7.1
 	o bos-2.5
 	o boson-0.13
