--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.14227 2015/03/14 14:34:35 ryoon Exp $
+$NetBSD: TODO,v 1.14228 2015/03/15 01:21:35 taca Exp $
 
 Suggested new packages
 ======================
@@ -415,7 +415,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o cdk-5.0.20120323
 	o cdrkit-1.1.10
 	o cfitsio-3.350
-	o chasen-2.4.5
 	o cheese-2.32.0 [GNOME 2.32]
 	o cheese-3.14.2
 	o cherokee-1.2.103 [pkg/48268]
