--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.14228 2015/03/15 01:21:35 taca Exp $
+$NetBSD: TODO,v 1.14229 2015/03/15 04:52:11 ryoon Exp $
 
 Suggested new packages
 ======================
@@ -789,7 +789,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o munin-node-1.4.6
 	o munin-server-1.4.6
 	o muse-0.9.2
-	o mypaint-1.1.0
 	o nagios-plugins-2.0.3
 	o nano-2.3.2
 	o nap-1.5.3
