--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.14230 2015/03/15 05:35:29 ryoon Exp $
+$NetBSD: TODO,v 1.14231 2015/03/15 15:29:08 mef Exp $
 
 Suggested new packages
 ======================
@@ -464,7 +464,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o digikam-4.7.0
 	o dillo-3.0.4.1
 	o dinotrace-9.4d
-	o dk-milter-1.0.2 [wip]
 	o doclifter-2.15
 	o dolphin-4.0.2
 	o drivel-3.0.5
