--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.14231 2015/03/15 15:29:08 mef Exp $
+$NetBSD: TODO,v 1.14232 2015/03/15 20:36:51 wiz Exp $
 
 Suggested new packages
 ======================
@@ -407,6 +407,8 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o bugzilla-3.6.12
 	o bzr-2.6.0
 	o c4-1.10 [schmonz]
+	o cairo-1.14.2
+	o cairo-gobject-1.14.2
 	o cal3d-0.11.0
 	o calcoo-2.1.0
 	o calligra-2.4.3 [in wip; koffice successor]
@@ -444,6 +446,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o cross-h8300-hms-binutils-2.17
 	o crossfire-1.71.0
 	o crossfire-client-gtk2-1.60.0
+	o cups-filters-1.0.67
 	o cvs-fast-export-1.29
 	o cvs2p4-2.5.5 [schmonz]
 	o cwm-5.6
@@ -524,6 +527,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o fltk2-2.0pre8323
 	o fluxbox-1.3.7
 	o fmsx-4.0
+	o font-util-1.3.1
 	o fotoxx-14.06
 	o frama-c-20140301
 	o freeciv-2.4.0
@@ -700,6 +704,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o ldapsdk-6.0.7
 	o lftp-4.5.2
 	o lgeneral-1.2.3
+	o libXvMC-1.0.9
 	o libcanberra-0.28 [drops support for GNOME2; don't update for now -- wiz]
 	o libchamplain08-0.12.9
 	o libextractor-1.2 [requires shm_open()]
@@ -885,7 +890,9 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-Scientific-doc-2.5.5
 	o py-Unidecode-0.04.14
 	o py-cassa-1.11.0
+	o py-cffi-0.9.2
 	o py-creole-1.1.1
+	o py-cryptography-0.8
 	o py-datapkg-0.9
 	o py-django-photologue-2.7
 	o py-django-registration-1.0
@@ -905,6 +912,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-ptt-1.10.2
 	o py-reportlab-3.0
 	o py-rope-0.9.4
+	o py-setuptools-14.2
 	o py-simpletal-5.1
 	o py-simpy-3.0.5
 	o py-smb-1.1.8
@@ -912,8 +920,10 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-suds-0.4.1
 	o py-sybase-0.37
 	o py-tlslite-0.4.6
+	o py-tortoisehg-3.3.2
 	o py-trytond-account-3.4.1	
 	o py-trytond-stock-3.4.0
+	o py-vdirsyncer-0.4.4
 	o py-wxWidgets-3.0.0
 	o py-zconfig-3.0.3
 	o qcad-3.7.5.0
@@ -922,6 +932,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o rails-4.1.5
 	o rainbowcrack-1.5
 	o raine-0.64.2
+	o randrproto-1.4.1
 	o rat-4.2.25
 	o rc-1.7.1 [at ftp://quenix2.dyndns.org/FreeBSD/ports/distfiles/]
 	o rdp-1.6
