--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.14242 2015/03/15 21:13:11 wiz Exp $
+$NetBSD: TODO,v 1.14243 2015/03/15 21:16:17 wiz Exp $
 
 Suggested new packages
 ======================
@@ -337,8 +337,8 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o GMT-5.1.1
 	o Geomyidae-0.26.3 [pkg/49585]
 	o GNUMail-1.2.2
-	o Mesa-10.4.4 [do not update since it removes support for DRI features needed by NetBSD. Work on updated MesaLib takes place in pkgsrc-wip.]
-	o MesaLib-10.4.4 [do not update since it removes support for DRI features needed by NetBSD. Work on updated MesaLib takes place in pkgsrc-wip.]
+	o Mesa-10.5 [do not update since it removes support for DRI features needed by NetBSD. Work on updated MesaLib takes place in pkgsrc-wip.]
+	o MesaLib-10.5 [do not update since it removes support for DRI features needed by NetBSD. Work on updated MesaLib takes place in pkgsrc-wip.]
 	o PAM-0.99.7.1
 	o R-3.1.2
 	o RBTools-0.6.3
@@ -409,6 +409,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o c4-1.10 [schmonz]
 	o cal3d-0.11.0
 	o calcoo-2.1.0
+	o calibre-2.21
 	o calligra-2.4.3 [in wip; koffice successor]
 	o cardboard-schedule-1.14c [at http://www.bright-green.com/downloads/]
 	o cddbd-1.5.2
@@ -460,7 +461,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o dcc-1.3.147 [ask OWNER first]
 	o dd_rescue-1.45
 	o delegate-9.9.9
-	o denemo-1.2.0
+	o denemo-1.2.2
 	o digikam-4.7.0
 	o dillo-3.0.4.1
 	o dinotrace-9.4d
@@ -524,6 +525,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o fltk2-2.0pre8323
 	o fluxbox-1.3.7
 	o fmsx-4.0
+	o fontforge-20150228
 	o fotoxx-14.06
 	o frama-c-20140301
 	o freeciv-2.4.0
@@ -568,7 +570,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o glade3-3.8.5 [GNOME 2.34]
 	o gle-4.2.4
 	o glom-1.14.2 [GNOME 2.26]
-	o glu-10.4.4
+	o glu-10.5
 	o gnats-4.2.0
 	o gnet1-1.1.9
 	o gnetman-20050429
@@ -783,11 +785,13 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o mpeg4ip-1.6.1
 	o mpop-1.0.29
 	o mserv-devel-0.41
+	o msgpack-1.0.0
 	o multitail-6.2
 	o munin-doc-1.4.6
 	o munin-node-1.4.6
 	o munin-server-1.4.6
 	o muse-0.9.2
+	o mysql-5.7.6
 	o nagios-plugins-2.0.3
 	o nano-2.3.2
 	o nap-1.5.3
@@ -864,7 +868,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o pks-0.9.6
 	o plasma-5.0.2
 	o ploticus-examples-230
-	o pngcrush-1.7.84
+	o pngcrush-1.7.85
 	o pokerth-1.0.1
 	o polsms-2.1.0
 	o poppass-4.0.14
@@ -1000,7 +1004,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o stgit-0.16
 	o stlport-4.6.2
 	o stow-2.2.0
-	o strace-4.9
+	o strace-4.10
 	o stratagus-2.2.5.5
 	o subtitleeditor-0.41.1
 	o sudo-1.8.12p1
