--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.16796 2016/12/16 14:07:05 mef Exp $
+$NetBSD: TODO,v 1.16797 2016/12/17 23:22:45 joerg Exp $
 
 Suggested new packages
 ======================
@@ -497,7 +497,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o cardboard-schedule-1.14c [at http://www.bright-green.com/downloads/]
 	o catdoc-1.1
 	o catdoc-tk-1.1
-	o ccgo-0.3.6.5
 	o cddbd-1.5.2
 	o cdk-5.0.20120323
 	o cdrkit-1.1.10
