--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.16800 2016/12/18 16:30:00 wiz Exp $
+$NetBSD: TODO,v 1.16801 2016/12/18 18:38:57 wiz Exp $
 
 Suggested new packages
 ======================
@@ -509,6 +509,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o cheese-3.16.1
 	o cherokee-1.2.103 [pkg/48268]
 	o chimera-1.30a
+	o chromaprint-1.4.1
 	o chromium-bsu-0.9.16.1
 	o chrony-2.3
 	o cim-5.1
@@ -538,7 +539,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o crossfire-1.71.0
 	o crossfire-client-gtk2-1.60.0
 	o csharp-mysql-6.9.8
-	o cups-filters-1.13.0
+	o cups-filters-1.13.1
 	o cvm-0.97
 	o cvs-fast-export-1.38
 	o cvs2p4-2.5.5 [schmonz]
@@ -732,6 +733,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o gliv-1.9.7
 	o glom-1.14.2 [GNOME 2.26]
 	o glx-utils-8.3.0
+	o gmp-6.1.2
 	o gnet1-1.1.9
 	o gnetman-20050429
 	o gnome-3.22.1
@@ -927,6 +929,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o ja-vflib-utils-2.25.6
 	o ja-vfxdvik-22.40y1
 	o jabberd-1.6.1.1
+	o jasper-2.0.6
 	o java-db3-3.87
 	o java-rxtx-2.1.17
 	o jcabc2ps-20150524
@@ -1073,6 +1076,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o mecab-ipadic-2.7.0.20070801
 	o mednafen-0.9.39.1
 	o megatools-1.9.97
+	o meld-3.16.4
 	o memached-1.4.33
 	o mergeant-0.67
 	o merkaator-0.18.2
@@ -1117,6 +1121,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o munin-node-1.4.6
 	o munin-server-1.4.6
 	o muse-0.9.2
+	o musicpd-0.19.21
 	o mutagen-tools-1.31
 	o myodbc-5.3.4
 	o mysql-workbench-6.3
@@ -1287,6 +1292,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o policyd-weight-0.1.15.2
 	o polsms-2.1.0
 	o poppass-4.0.14
+	o poppler-0.50.0
 	o posh-0.12.6
 	o postal-0.72
 	o povray-3.7.0.0
@@ -1316,6 +1322,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-HappyDoc-3.0
 	o py-Scientific-doc-2.5.5
 	o py-Unidecode-0.04.19
+	o py-ZopeInterface-4.3.3
 	o py-acora-1.9
 	o py-apache-libcloud-0.20.1
 	o py-buildbot-0.9.1
@@ -1323,6 +1330,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-cassa-1.11.0
 	o py-colorama-0.3.6
 	o py-creole-1.1.1
+	o py-cryptography-1.7.1
 	o py-cups-1.9.73
 	o py-d2to1-0.2.12
 	o py-daemon-2.1.1
@@ -1330,6 +1338,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-django-photologue-2.7
 	o py-djangorestframework-2.3.12
 	o py-doctor-15.1.0
+	o py-dulwich-0.15.0
 	o py-ephem3-3.7.6.0
 	o py-gmpy-1.17
 	o py-gnome-menus-3.8.0
@@ -1341,6 +1350,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-jaraco_util-11.0
 	o py-jdcal-1.2
 	o py-keybinder-0.3.1
+	o py-mccabe-0.5.3
 	o py-mezzanine-4.2.2
 	o py-munkres-1.0.7
 	o py-musicbrainz-0.7.4
@@ -1356,6 +1366,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-radare2-1.0.1
 	o py-scgi-1.15
 	o py-serpent-1.12
+	o py-setuptools-32.1.0
 	o py-simpletal-5.1
 	o py-smb-1.1.17
 	o py-softlayer-5.1.0
@@ -1588,6 +1599,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o uhttpmock-0.5.0
 	o unicap-0.9.8
 	o unicode-screensaver-0.5
+	o unifont-9.0.05
 	o units-2.12
 	o unrealircd-4.0.6
 	o uriparser-0.8.2
@@ -1604,8 +1616,8 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o vicq-0.4.2
 	o viewvc-1.1.25
 	o vile-9.8q
-	o vim-8.0.0130
-	o vim-share-8.0.0130
+	o vim-8.0.0134
+	o vim-share-8.0.0134
 	o vinagre-3.16.1
 	o vino-3.16.0
 	o virt-manager-1.3.2
@@ -1618,6 +1630,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o vte-0.36.0
 	o vtk-5.10.1
 	o wMosaic-3.8.22
+	o waf-1.9.7
 	o wap-utils-1.4.1
 	o warmux-11.04.1
 	o warzone2100-2.3.8
@@ -1634,6 +1647,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o windowlab-1.40
 	o wine-1.8.5
 	o wine-devel-1.9.22
+	o wireshark-2.2.3
 	o wmi-11
 	o wmii+ixp-3.9.2 [pkg/43459; wip (wmii-devel); see also libixp entry]
 	o wmx-8
@@ -1641,7 +1655,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o worker-3.8.3
 	o wxGTK-3.1.0
 	o wxRemind-101
-	o x264-devel-20161210
+	o x264-devel-20161217
 	o x2vnc-1.31
 	o xa65-2.3.7
 	o xaric-0.13.7
