--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.16801 2016/12/18 18:38:57 wiz Exp $
+$NetBSD: TODO,v 1.16802 2016/12/18 21:12:58 tnn Exp $
 
 Suggested new packages
 ======================
@@ -1537,7 +1537,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o swi-prolog-packages-7.1.37
 	o swt-4.5
 	o sympa-6.2.14
-	o synergy-1.8.5
 	o sysinfo-4.2.2
 	o system-tools-backends-2.10.1 [needs polkit|GNOME 2.30]
 	o systrace-1.6e
