--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.16818 2016/12/21 10:07:51 wiz Exp $
+$NetBSD: TODO,v 1.16819 2016/12/23 03:54:07 ryoon Exp $
 
 Suggested new packages
 ======================
@@ -554,7 +554,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o dap-3.10
 	o dar-2.4.14
 	o darcs-2.12.0
-	o darktable-2.0.7
 	o dasher-4.11
 	o davical-1.1.4
 	o dd_rescue-1.46
