--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.16821 2016/12/23 23:19:22 wiz Exp $
+$NetBSD: TODO,v 1.16822 2016/12/25 00:12:49 ryoon Exp $
 
 Suggested new packages
 ======================
@@ -1167,7 +1167,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o openoffice3-3.3
 	o openslp-2.0.0
 	o opensmtpd-6.0.0
-	o opensource-cobol-1.5.1J [pkg/51738]
 	o openssh-7.4p1
 	o openssl-1.1.0
 	o openvas-libraries-8.0.8
