--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.16823 2016/12/25 09:48:30 wiz Exp $
+$NetBSD: TODO,v 1.16824 2016/12/25 11:41:22 wiz Exp $
 
 Suggested new packages
 ======================
@@ -666,6 +666,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o fish-2.2.0
 	o flashplayer-0.4.13
 	o flashrom-0.9.8
+	o fldigi-3.23.19
 	o flightgear-2.12
 	o flightgear-data-3.4.0
 	o flow-tools-0.411
@@ -1275,6 +1276,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o php-soycms-1.8.11
 	o php-tiki6-6.14
 	o php-tt-rss-1.15.3
+	o phpmyadmin-4.6.5.2 [pkg/51741]
 	o phraseanet-3.8.6
 	o phraseanet-indexer-3.8.6
 	o picp-0.6.8
