--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.16824 2016/12/25 11:41:22 wiz Exp $
+$NetBSD: TODO,v 1.16825 2016/12/26 13:39:33 ryoon Exp $
 
 Suggested new packages
 ======================
@@ -1153,6 +1153,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o nqp-2016.02
 	o ns-3.14.1
 	o ns-plugger-common-5.1.3
+	o nss-3.28 [This breaks firefox for ECDSA tls connection]
 	o ntop-5.0
 	o nts-82
 	o nuitka-0.5.19
