--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.16839 2016/12/30 00:55:46 wiz Exp $
+$NetBSD: TODO,v 1.16840 2016/12/30 10:01:00 ryoon Exp $
 
 Suggested new packages
 ======================
@@ -1382,7 +1382,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-zconfig-3.0.3
 	o pythontidy-1.23
 	o qbzr-0.23.2
-	o qemu-2.8.0
 	o qlandkartegt-1.8.1 [pkg/49910]
 	o qnetwalk-1.4
 	o qt4-creator-3.4.0
